# ac-core

./: INSTALLATION.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
ac_core/: __init__.py  database_manager.py  models.py  signal_inserter.py
ac_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: __init__.py  basic_usage.py
tests/: __init__.py  conftest.py  test_models.py  test_signal_inserter.py
