[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ac-core"
version = "0.1.0"
description = "Shared utilities library for Alpha Crucible projects (signal insertion, database operations, etc.)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alpha Crucible Team", email = "team@alphacrucible.com"},
]
keywords = ["quantitative finance", "trading signals", "database", "supabase", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ac_core*"]
